Add send state endpoint
